[kbss-cvut/record-manager-ui#290] Support multiple institutions in RecordFilter